<resources>
    <string name="app_name">RevisitingAndroid</string>
    <string name="note_LVA_v1">Pada dasarnya sama saja, hanya saja kita menggunakan livedata untuk realtime changed saja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- View Group Section -->
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="size">Size</string>
    <string name="battery">Battery</string>a
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Narenda Wicaksono</string>
    <string name="buy">Beli</string>
    <string name="dummy_value">$735</string>
    <string name="dummy_photos">6 photos</string>
    <string name="channel_name_basic">basic_channel</string>
    <string name="channel_name_basic_description">some channel description basic</string>
    <string name="title_activity_main_compose">MainComposeActivity</string>


    <string name="placeholder_search">Cari kopi pilihanmu!</string>
    <string name="category_all">All</string>
    <string name="category_americano">Americano</string>
    <string name="category_cappuccino">Cappuccino</string>
    <string name="category_espresso">Espresso</string>
    <string name="category_frappe">Frappe</string>
    <string name="category_latte">Latte</string>
    <string name="category_macchiato">Macchiato</string>
    <string name="category_mocha">Mocha</string>
    <string name="section_category">Mau ngopi apa hari ini?</string>
    <string name="section_favorite_menu">Menu Favorit</string>
    <string name="section_best_seller_menu">Menu Terlaris</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <!-- VIEW GROUP SECTION end -->
</resources>