<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pixel_google"
                />


            <TextView
                style="@style/TextContent.Small.White"
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:background="#4D000000"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:text="@string/dummy_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                />
        </FrameLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_value"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"
            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/stock"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"
            android:text="@string/specification"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginEnd="16dp"
                android:text="@string/display"
                />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_display"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_specs_size"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_specs_battery"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    />

            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
